# ExtensibleQt6Application

./: CMakeLists.txt  README.md  appimpl.cpp  appimpl.h  appinterface.h  apputils.cpp  apputils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pythoninstance.cpp  pythoninstance.h  pythonmoduleapp.cpp  pythonmoduleapp.h  pythonmoduleredirect.cpp  pythonmoduleredirect.h  pythonutils.cpp  pythonutils.h
examples/: pyvistaqt_example.py  pyvistaqt_topo_example.py
